# IP-particle-fluid-sim

./: CMakeLists.txt  README.md
clEnqueueNDRangeKernel/: host.c  propagate.cl
clEnqueueTask/: host.c  propagate.cl
